fix: header maquetado con enlaces visibles y botón a más de 768px

--- a/styles/common.css
+++ b/styles/common.css
@@ -1,6 +1,7 @@
 :root {
-    --bg-color: #eeebd0ff;
+    --bg-color: rgb(238, 235, 208);
     --main-text-color: #000;
+    --secondary-text-color: rgb(238, 235, 208);
     --main-brand-color: #fa190cff;
     font-size: 16px;
     font-family: sans-serif;
