--- a/styles/components.css
+++ b/styles/components.css
@@ -8,3 +8,11 @@
     }
 
 }
+
+.btn {
+    background-color: var(--main-brand-color);
+    color: var(--main-text-color);
+    text-decoration: none;
+    font-weight: bolder;
+    padding: 1rem;
+}
